  don't allow teleport.
- Fix a bug with empty partySkill blocks messing up partySkill.
- Static mode in the Console::Other interface now works correctly.
- Correctly strip language code from party chat.
- When someone in your avoid list sends you a PM, Kore will crash.
- Only clear AI if teleport succeeded.
- Fix a bug which causes monster IDs to end up in the player hash.

New features:
- Beginnings of code that will allow skill usage on non-partied players.
  deltaHp condition added (currently useless to non-developers).
- Support for the 'charServer_ip', and 'charServer_port' options
  in servers.txt, which allow you to force connection to a specific
  map server.
- Support for eAthena servers. Set serverType to 3 for these servers.
- The _inInventory option's syntax has changed.
  Previous syntax:
    inInventory_name Red Potion,Blue Gem,AnotherItem
    inInventory_qty >5,>0,=10
  New syntax:
    inInventory Red Potion >5,Blue Gem,AnotherItem=10
- Support login error 1 as "Error: Server is closed".
- Use ai_cartAdd timeout if it's specified in timeouts.txt.
  This is for servers where you are disconnected when you try to add
  many items to the cart too quickly.
- A brand new console interface for Unix/Linux, which uses GNU readline.
  Input buffer corruption is now a thing of the past.
- Different RO servers can have different versions of the same field.
  For example, pRO is stuck with the old Payon while most other servers
  have the new Payon. OpenKore can now automatically select the correct
  field file by using servers.txt. You must have the latest fieldpack
  and the latest servers.txt from the latest tablepack.

New config options:
- autoSpell (spell name)
  When the sage autospell list is sent from the server, Kore will
  automatically pick the specified skill name to be used.
  Combine this with a useSelf_skill for casting Auto Spell.
- tankersList is a comma-seperated lists of player names that should be